apps/boutique-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-ingress
  namespace: online-boutique
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: shop.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
